--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
-    "require": {
-        "cboden/ratchet": "^0.4.4"
-    }
+	"autoload": {
+		"psr-4": {
+			"App\\": "app/"
+		}
+	},
+	"require": {
+		"cboden/ratchet": "^0.4.4",
+		"firebase/php-jwt": "^6.10",
+		"vlucas/phpdotenv": "^5.6"
+	}
 }
