--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
 	"require": {
 		"cboden/ratchet": "^0.4.4",
 		"firebase/php-jwt": "^6.10",
-		"vlucas/phpdotenv": "^5.6"
+		"vlucas/phpdotenv": "^5.6",
+		"illuminate/routing": "^10.48"
 	}
 }
