--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,11 @@ APP_ENV=development
 APP_DEBUG=true
 
 SERVER_IP=localhost
-WEBSOCKET_PORT=8010
+WS_PORT=8010
 
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET="your_jwt_secret_key"
 
 DATABASE_HOST=localhost
 DATABASE_USERNAME=sa
-DATABASE_PASSWORD=Quesolulu23
+DATABASE_PASSWORD=Quesolulu12
 DATABASE_NAME=WEBSOCKET
