--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 		"cboden/ratchet": "^0.4.4",
 		"firebase/php-jwt": "^6.10",
 		"vlucas/phpdotenv": "^5.6",
-		"illuminate/routing": "^10.48"
+		"illuminate/routing": "^10.48",
+		"react/http": "^1.10"
 	}
 }
